<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvSensorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_sensor"
        android:textColor="@color/ice_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMotionIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_motion"
        android:contentDescription="@string/desc_motion_icon"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvInstruccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruccion_shake"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/ivMotionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEstadoSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/estado_reposo"
        android:textColor="@color/gray_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruccion" />

</androidx.constraintlayout.widget.ConstraintLayout>